--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -20,8 +20,7 @@
     </fragment>
     <fragment
         android:id="@+id/detailFragment"
-        android:name="altayiskender.movieapp.ui.Details.DetailFragment"
-        android:label="Details" >
+        android:name="altayiskender.movieapp.ui.Details.DetailFragment">
         <action
             android:id="@+id/action_detailFragment_to_peopleFragment"
             app:destination="@id/peopleFragment"
@@ -34,7 +33,6 @@
     <fragment
         android:id="@+id/peopleFragment"
         android:name="altayiskender.movieapp.ui.People.PeopleFragment"
-        android:label="card_people_details"
         tools:layout="@layout/card_people_details" >
         <action
             android:id="@+id/action_peopleFragment_to_detailFragment"
