directory rename,nav anim change

--- a/app/src/main/res/layout/card_people_details.xml
+++ b/app/src/main/res/layout/card_people_details.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
         android:orientation="vertical"
-        tools:context=".ui.People.PeopleFragment">
+        tools:context=".ui.people.PeopleFragment">
 
         <LinearLayout
             android:id="@+id/linearLayout"
