--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,7 +4,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.Details.DetailFragment">
+        tools:context=".ui.details.DetailFragment">
 
 
         <androidx.recyclerview.widget.RecyclerView
