--- a/app/src/main/res/layout/fragment_popular.xml
+++ b/app/src/main/res/layout/fragment_popular.xml
@@ -7,7 +7,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.Popular.PopularFragment">
+        tools:context=".ui.popular.PopularFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/popularRecyclerView"
