--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,53 +7,55 @@
 
     <fragment
         android:id="@+id/popularFragment"
-        android:name="altayiskender.movieapp.ui.Popular.PopularFragment"
-        android:label="Popular" >
+        android:name="altayiskender.movieapp.ui.popular.PopularFragment"
+        android:label="Popular"
+        tools:layout="@layout/fragment_popular">
         <action
             android:id="@+id/action_popularFragment_to_detailFragment"
             app:destination="@id/detailFragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
 
     </fragment>
     <fragment
         android:id="@+id/detailFragment"
-        android:name="altayiskender.movieapp.ui.Details.DetailFragment">
+        android:name="altayiskender.movieapp.ui.details.DetailFragment"
+        tools:layout="@layout/fragment_detail">
         <action
             android:id="@+id/action_detailFragment_to_peopleFragment"
             app:destination="@id/peopleFragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right" />
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
 
     </fragment>
     <fragment
         android:id="@+id/peopleFragment"
-        android:name="altayiskender.movieapp.ui.People.PeopleFragment"
-        tools:layout="@layout/card_people_details" >
+        android:name="altayiskender.movieapp.ui.people.PeopleFragment"
+        tools:layout="@layout/fragment_people">
         <action
             android:id="@+id/action_peopleFragment_to_detailFragment"
             app:destination="@id/detailFragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right" />
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
 
     </fragment>
     <fragment
         android:id="@+id/bookmarksFragment"
-        android:name="altayiskender.movieapp.ui.Bookmarks.BookmarksFragment"
+        android:name="altayiskender.movieapp.ui.bookmarks.BookmarksFragment"
         android:label="@string/nav_bookmarks"
         tools:layout="@layout/fragment_bookmarks" >
         <action
             android:id="@+id/action_bookmarksFragment_to_detailFragment"
             app:destination="@id/detailFragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
 </navigation>
