--- a/app/src/main/res/layout/list_item_home.xml
+++ b/app/src/main/res/layout/list_item_home.xml
@@ -11,11 +11,12 @@
         <ImageView
             android:id="@+id/homePosterImageView"
             android:layout_width="match_parent"
-            android:layout_height="260dp"
-            android:contentDescription="@string/movie_poster"
+            android:layout_height="0dp"
             android:adjustViewBounds="true"
             android:background="@android:color/darker_gray"
+            android:contentDescription="@string/movie_poster"
             android:scaleType="centerCrop"
+            app:layout_constraintDimensionRatio="3:4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
