dependency upgrades, other fixes

--- a/app/src/main/res/layout/card_people_works.xml
+++ b/app/src/main/res/layout/card_people_works.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.google.android.material.card.MaterialCardView
-
+    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/peopleWorkCardView"
         android:layout_width="match_parent"
@@ -59,4 +57,3 @@
 
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
-</layout>
