--- a/app/src/main/res/layout/card_bookmarks.xml
+++ b/app/src/main/res/layout/card_bookmarks.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <com.google.android.material.card.MaterialCardView xmlns:tools="http://schemas.android.com/tools"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/bookmarkCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -49,4 +49,3 @@
 
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
-</layout>
