--- a/app/src/main/res/layout/card_cast.xml
+++ b/app/src/main/res/layout/card_cast.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout xmlns:tools="http://schemas.android.com/tools"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_normal"
@@ -44,4 +44,3 @@
         </LinearLayout>
 
     </LinearLayout>
-</layout>
