--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/popularFragment"
+        android:id="@+id/home"
         android:icon="@drawable/ic_movie_black"
         android:title="@string/nav_discover" />
     <item
-        android:id="@+id/bookmarksFragment"
+        android:id="@+id/bookmarks"
         android:icon="@drawable/ic_unfavorite"
         android:title="@string/nav_bookmarks" />
 </menu>
