--- a/app/src/main/res/navigation/home.xml
+++ b/app/src/main/res/navigation/home.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/navigation"
+    android:id="@+id/home"
     app:startDestination="@+id/popularFragment">
 
     <fragment
@@ -45,17 +45,5 @@
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
 
     </fragment>
-    <fragment
-        android:id="@+id/bookmarksFragment"
-        android:name="com.altayiskender.movieapp.ui.bookmarks.BookmarksFragment"
-        android:label="@string/nav_bookmarks"
-        tools:layout="@layout/fragment_bookmarks" >
-        <action
-            android:id="@+id/action_bookmarksFragment_to_detailFragment"
-            app:destination="@id/detailFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
-    </fragment>
+
 </navigation>
