Redeveloped popular movies page and movie detail page with compose. Adding infinite loading to popular page. Refactored data related classes with a better structure.

--- a/app/src/main/res/layout/card_cast.xml
+++ b/app/src/main/res/layout/card_cast.xml
@@ -18,7 +18,7 @@
             android:layout_height="100dp"
             android:background="@android:color/darker_gray"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_person" />
+            android:src="@drawable/ic_person_placeholder" />
 
         <TextView
             android:id="@+id/castNameTv"
